RESOLVED FIXED11314
Fix build when XSLT_SUPPORT is not defined
https://bugs.webkit.org/show_bug.cgi?id=11314
Summary Fix build when XSLT_SUPPORT is not defined
Krzysztof Kowalczyk
Reported 2006-10-16 07:24:27 PDT
Currently XSLT_SUPPORT is forced by WebCore\config.h, which defeats the purpose of having it configurable (should be passed from a Makefile) and one place unconditionally uses xslt support.
Attachments
fix build when XSLT_SUPPORT is not defined (1.53 KB, patch)
2006-10-16 07:26 PDT, Krzysztof Kowalczyk
aroben: review-
fix unconditional use of XSLT (1.23 KB, patch)
2006-10-17 06:24 PDT, Krzysztof Kowalczyk
timothy: review+
Krzysztof Kowalczyk
Comment 1 2006-10-16 07:26:27 PDT
Created attachment 11110 [details] fix build when XSLT_SUPPORT is not defined * remove #define XSLT_SUPPORT from WebCore\config.h, because it defeats the purpose of having it configurable (should be passed from a Makefile) * fix on place in XMLTokenizer that was using xslt support unconditionally
Adam Roben (:aroben)
Comment 2 2006-10-16 14:17:35 PDT
Comment on attachment 11110 [details] fix build when XSLT_SUPPORT is not defined If you're going to make this change to config.h, you'll need to change the build configurations on Mac (at least).
Krzysztof Kowalczyk
Comment 3 2006-10-16 14:24:43 PDT
I can't do it since I have no access to Mac. I was hoping that a mac-owning commiter could do it.
Krzysztof Kowalczyk
Comment 4 2006-10-17 06:24:50 PDT
Created attachment 11123 [details] fix unconditional use of XSLT Updated the patch to not modify config.h. I would still like this change to be made but if submitting a change to xcode project files is a requirement for the patch, then unfortunately I can't do it because I don't have access to mac/xcode. For someone having an apple, it should be trivial.
Sam Weinig
Comment 5 2006-10-24 06:20:57 PDT
Landed in r17252.
Note You need to log in before you can comment on or make changes to this bug.