        Reviewed by Tim H.

Fix for http://bugs.webkit.org/show_bug.cgi?id=11314
        Fix build when XSLT_SUPPORT is not defined

        Fix unconditional use of XSLT support.

        * dom/XMLTokenizer.cpp:
        (WebCore::XMLTokenizer::end):



Canonical link: https://commits.webkit.org/14519@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@17252 268f45cc-cd09-0410-ab3c-d52691b4dbfc